# Personal-assistant

./: .gitignore  LICENSE  README.md  graph.py  main.py  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
static/: index.html
